--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "main": "App.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon public/App.js"
+    "start": "nodemon server/App.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "mysql2": "^3.6.1",
     "nodemon": "^3.0.1",
     "path": "^0.12.7"
   }
