Changes to .json

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "routes": [
       {
         "src": "/getData",
-        "dest": "public/App.js"
+        "dest": "server/index.js"
       }
     ]
   }
