--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ngo2",
   "version": "1.0.0",
   "description": "",
-  "main": "App.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server/index.js"
